--- a/PedroVEXEMPLO0.html
+++ b/PedroVEXEMPLO0.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exemplo 0 de PedroV</title>
-  <link rel="stylesheet" href="./style/stylePEDROVEXEMPLO0.css" />
+  <link rel="stylesheet" href="./style - Copia/stylePEDROVEXEMPLO0.css" />
 </head>
 
 <body>
@@ -18,20 +18,20 @@
   <main class="container">
     <div class="coluna1">
       <div class="bloco" id="bloco1"> <a href="./AULA/assets/ProjetoArma (20250207043958).jpg" target="_blank">
-          <img src="./AULA/assets/ProjetoArma (20250207043958).jpg" alt="imagem"></div>
+          <img src="./AULA - Copia/assets/ProjetoArma (20250207043958).jpg" alt="imagem"></div>
       </a>
     </div>
     <div class="coluna2">
       <div class="bloco2">
         <div class="bloco" id="bloco4"><a href="./AULA/assets/Projeto (20250402102055).png" target="_blank">
-            <img src="./AULA/assets/Projeto (20250402102055).png" alt="imagem"></a></div>
+            <img src="./AULA - Copia/assets/Projeto (20250402102055).png" alt="imagem"></a></div>
         <div class="bloco" id="bloco5"><a href="./AULA/assets/Projeto fone (20250423025216).png" target="_blank">
-            <img src="./AULA/assets/Projeto fone (20250423025216).png" alt="imagem"></a></div>
+            <img src="./AULA - Copia/assets/Projeto fone (20250423025216).png" alt="imagem"></a></div>
       </div>
     </div>
     <div class="coluna3">
-      <div class="bloco" id="bloco3"><a href="./AULA/assets/Projeto sol (20250425032445).jpg" target="_blank"><img
-          src="./AULA/assets/Projeto sol (20250425032445).jpg" alt="imagem"></a></div>
+      <div class="bloco" id="bloco3"><a href="./AULA - Copia/assets/Projeto sol (20250425032445).jpg" target="_blank"><img
+          src="./AULA - Copia/assets/Projeto sol (20250425032445).jpg" alt="imagem"></a></div>
     </div>
 
   </main>
